# Mcp-insight

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
classifier/: Dockerfile  requirements.txt
classifier/app/: llm_fallback.py  main.py  taxonomy_data.py
classifier/tests/: test_classify.py  test_llm_fallback.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json
dashboard/src/: App.jsx  api.js  index.css
dashboard/src/components/: CategoryPage.jsx  HealthBadge.jsx  InfoTooltip.jsx  ServerDetail.jsx  ServerList.jsx  Settings.jsx  SeverityPage.jsx  Sparkline.jsx  Taxonomy.jsx  TaxonomyDrilldown.jsx
dashboard/src/components/charts/: BarChart.jsx  Heatmap.jsx  (+2 more)
deploy/: demo_flaky_server.py  drive_demo.py
ingestion/: requirements-dev.txt  requirements.txt
ingestion/app/: alerting.py  anomaly.py  auth.py  classifier_client.py  config.py  db.py  health_scoring.py  keys.py  logging_config.py  main.py  metrics_prom.py  models.py  rate_limit.py
ingestion/app/routes/: alerts.py  events.py  feedback.py  health.py  keys.py  stats.py
ingestion/tests/: conftest.py  test_alerting.py  test_anomaly.py  test_auth.py  test_bucket_history.py  test_classifier_client.py  test_feedback.py  test_health_scoring.py  test_ingest_auth.py  test_keys.py  test_rate_limit.py  test_stats.py
wrapper/: pyproject.toml
wrapper/mcp_insight/: __init__.py  buffer.py  capture.py  cli.py  interceptor.py  metrics.py  proxy.py  schema_guard.py
wrapper/tests/: test_buffer.py  test_capture.py  test_schema_guard.py
