[project]
name = "mcp-insight"
version = "0.1.0"
description = "Universal, zero-code-change observability wrapper for MCP servers"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "psutil>=5.9",
    "jsonschema>=4.21",
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-insight = "mcp_insight.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_insight"]
